--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dias-copria-color-sort",
+  "name": "biigle-copria-color-sort",
   "version": "0.0.1",
   "directories": {
     "test": "tests"
