Implement color sorter in Vue, use Python script instead of Copria
Closes #5

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
     "name": "biigle/copria-color-sort",
     "require": {
-        "biigle/volumes": "~1.0",
-        "biigle/copria": "~1.0"
+        "biigle/volumes": "~1.5"
     },
     "require-dev": {
     },
