--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,13 @@
         "fix": [
             "php-cs-fixer --config-file='.php_cs' fix"
         ]
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Biigle\\Modules\\ColorSort\\ColorSortServiceProvider"
+            ]
+        }
     }
 }
 
