--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         }
     ],
     "require": {
-        "biigle/volumes": "^2.0"
+        "biigle/volumes": "^2.0",
+        "biigle/laravel-file-cache": "^2.0"
     },
     "require-dev": {
     },
