--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,8 @@
         }
     ],
     "require": {
-        "biigle/volumes": "^2.0",
+        "biigle/volumes": "^2.0 | dev-master",
         "biigle/laravel-file-cache": "^2.0"
-    },
-    "require-dev": {
     },
     "autoload": {
         "psr-4": {
