--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "require": {
         "biigle/volumes": "^2.0 | dev-master",
-        "biigle/laravel-file-cache": "^2.0"
+        "biigle/laravel-file-cache": "^2.0 | ^3.0"
     },
     "autoload": {
         "psr-4": {
