--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Trigger schema update
       run: |
         curl -X POST --fail \
-          -H "Authorization: token ${{ secrets.TOKEN }}" \
+          -H "Authorization: token ${{ secrets.BIIGLE_SCHEMA_API_TOKEN }}" \
           -H "Content-Type: application/json" \
           --data '{"event_type": "build_application"}' \
           https://api.github.com/repos/biigle/schema/dispatches
