--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "src/resources/assets/js/main.js": {
-    "file": "assets/main-BrRtZ2BL.js",
+    "file": "assets/main-BRFbTWZo.js",
     "name": "main",
     "src": "src/resources/assets/js/main.js",
     "isEntry": true
